basic messaging service

--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -1,1 +1,16 @@
-<p>chat works!</p>
+<main class="container">
+    <section class="main-info">
+        <h1>{{ username }}</h1>
+        <h2>{{ room }}</h2>
+    </section>
+    <div class="user-list">
+        <h3 *ngFor="let user of userList">{{ user }}</h3>
+    </div>
+    
+
+    <app-messages [messageList]="messageList"></app-messages>
+    <div class="message-input">
+        <input type="text" [(ngModel)]="message">
+        <button (click)="sendMessage()">Send</button>
+    </div>
+</main>
