--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -1,14 +1,13 @@
 <main class="container">
     <section class="main-info">
-        <h1>{{ username }}</h1>
         <h2>{{ room }}</h2>
     </section>
-    <div class="user-list">
-        <h3 *ngFor="let user of userList">{{ user }}</h3>
+    <div class="mid">
+        <!-- <section class="user-list">
+            <h3 *ngFor="let user of userList">{{ user }}</h3>
+        </section> -->
+        <app-messages [style.scrollHeight]="scrollHeight" [messageList]="messageList"></app-messages>
     </div>
-    
-
-    <app-messages [messageList]="messageList"></app-messages>
     <div class="message-input">
         <input type="text" [(ngModel)]="message">
         <button (click)="sendMessage()">Send</button>
