--- a/src/app/chat/chat.component.css
+++ b/src/app/chat/chat.component.css
@@ -1,9 +1,26 @@
 .container{
-    border: solid red;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
 }
 .main-info{
-    border: solid yellowgreen;
+    display: flex;
+    justify-content: center;
+    border-bottom: solid blue;
 }
-.user-list{
-    border: solid hotpink;
+/* .user-list{
+    border-right: dotted blue;
+    padding: 3%;
+    justify-content: left;
+    display: none;
+} */
+.mid{
+    display: flex;
+    flex-direction: row;
 }
+.message-input{
+    display: flex;
+    justify-content: center;
+    margin: 0.5em;
+}
+
