--- a/src/app/chat/chat.component.css
+++ b/src/app/chat/chat.component.css
@@ -2,12 +2,14 @@
     width: 100%;
     display: flex;
     flex-direction: column;
+    font-family: Arial, Helvetica, sans-serif;
 }
 .main-info{
     display: flex;
     justify-content: center;
     border-bottom: solid blue;
     justify-content: flex-end;
+    margin-bottom: 1em;
 }
 /* .user-list{
     border-right: dotted blue;
@@ -25,6 +27,9 @@
     margin: 0.5em;
 }
 .user-list{
+    display:flex;
+    flex-direction: column;
+    justify-content: flex-start;
     position: absolute;
     margin:auto;
     padding: 3em;
@@ -32,9 +37,11 @@
     z-index: 99;
     right:0;
     top:5em;
+    max-height: 14em;
+    overflow-y: scroll;
 }
 .smoke-screen{
-    background-color: rgba(67, 67, 67,.33);
+    background-color: rgba(118, 118, 118, 0.33);
     position: absolute;
     width:100%;
     height: 110%;
